# llvm-expected

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ExtraPayloadError.cpp  ExtraPayloadError.h  README.md  TestLLVMExpected.cpp  example.cpp  llvm-expected-test.cpp  llvm-expected.h
benchmarks/: CMakeLists.txt
benchmarks/Exception/: BenchOverheadExample.cpp  BenchSuccessRates.cpp  BenchSuccessRates.h  BenchmarkException.cpp  CMakeLists.txt  FastRand.h  FwdException.cpp  FwdIntException.cpp  FwdIntOutcome.cpp  FwdVoidException.cpp  FwdVoidOutcome.cpp  PayloadException.cpp  PayloadOutcome.cpp  SuccessRateException.cpp  SuccessRateOutcome.cpp
benchmarks/LLVMExpected/: BenchDirectCompareError.cpp  BenchDirectCompareExpected.cpp  BenchOptimizations.cpp  BenchOptimizations.h  BenchOverheadExample.cpp  BenchOverheadExample.h  BenchPerfCategories.cpp  BenchPerfCategories.h  BenchSuccessRates.cpp  BenchSuccessRates.h  BenchmarkLLVMExpected.cpp  CMakeLists.txt  FastRand.h  FwdIntAdHoc.cpp  FwdIntErrorCode.cpp  FwdIntExpected.cpp  FwdVoidAdHoc.cpp  FwdVoidError.cpp  FwdVoidErrorCode.cpp  PayloadAdHoc.cpp  PayloadErrorCode.cpp  PayloadExpected.cpp  SuccessRateAdHoc.cpp  SuccessRateErrorCode.cpp  SuccessRateExpected.cpp
benchmarks/LLVMExpected/forwarding/: FwdIntAdHoc.cpp  FwdIntErrorCode.cpp  FwdIntExpected.cpp  FwdIntOutcome.cpp  FwdVoidAdHoc.cpp  FwdVoidError.cpp  FwdVoidErrorCode.cpp  FwdVoidOutcome.cpp
benchmarks/common/: Compiler.h  FastRand.h  WorkloadSim.h  WorkloadSimBench.cpp  outcome.hpp
cmake/: config-ix.cmake
include/: ErrorBase.h  Errors.h  Expected.h  ForceAllErrors.h
include/llvm/Config/: config.h
include/llvm/Support/: AlignOf.h  Error.h  ErrorBase.h  ErrorHandling.h  Errors.h  Expected.h
lib/: ErrorBase.cpp  ForceAllErrors.cpp
lib/Support/: BinaryStreamWriter.cpp  CMakeLists.txt  CachePruning.cpp  Error.cpp  ErrorBase.cpp  ErrorHandling.cpp  GlobPattern.cpp  JSON.cpp  TarWriter.cpp
tests/: CMakeLists.txt  Common.h  CustomError.cpp  CustomError.h  ErrorTest.cpp  ExtraPayloadError.h  TestErrorList.cpp  TestErrorList.h  TestErrorSuccess.cpp  TestErrorSuccess.h  TestErrorTypeHierarchies.cpp  TestExtraPayloadError.cpp  TestExtraPayloadError.h  TestForceAllErrorsChallenges.cpp  TestForceAllErrorsChallenges.h  TestForceAllErrorsDebug.cpp  TestForceAllErrorsDebug.h  TestForceAllErrorsRelease.cpp  TestForceAllErrorsRelease.h  TestLLVMExpected.cpp  TestStringError.cpp  TestStringError.h
unittests/: CMakeLists.txt
unittests/Support/: CMakeLists.txt  ErrorTest.cpp
